<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_black_36"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_disconnect"
            android:icon="@drawable/baseline_exit_to_app_black_36"
            android:title="@string/disconnect" />
        <item
            android:id="@+id/nav_transactions"
            android:icon="@drawable/baseline_credit_card_black_36"
            android:title="@string/transactions" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/baseline_build_black_36"
            android:title="@string/settings" />
    </group>
</menu>